# soda_yxmb_compat_engine

./: README.md  pyproject.toml
demo/phis_config/: admin.txt  env.txt
kapybara/: __init__.py  form_element.py  hightlight_text.py  runtime_counter.py  shared_data.py  shortcuts.py  tool.py  year_date_tree.py
kapybara/browserlib/: __init__.py  custom_browser.py  加解密.py
kapybara/common/: __init__.py  envWrite.py  excel_create.py  write_excel.py
phis_build/: __main__.py  build_steps.py  config.py  logging_config.py  main.py  version.py
phis_config/: __init__.py  common.py  config.py  config_class.py  config_v2.py
phis_doctor_advice/: __init__.py  __main__.py
phis_introducing_med/: __init__.py  delete_existing.py  extract_med_data.py  handle_popup.py  introducing_history_meds.py  introducing_medication.py  is_drug_name_similar.py  save_med_records.py
phis_lifestyle_advice/: __init__.py  __main__.py
phis_logging/: __init__.py  dir_switch.py  logging_config.py
phis_login/: LoginPage.py  __init__.py  default.yaml  gui_error.py  login_v2.py  登录健康档案系统.py  登录医生工作站.py
tests/kapybara/: config.ini  test_browser.py
tests/phis_build/: .gitignore  OCR测试.py  VERSION  phis_build.toml
tests/phis_config/执行结果/: env.txt
tests/phis_config/文档/: admin.txt
tests/phis_login/: test_main.py  潞城.yaml
yxmb_compat_engine/: __main__.py  async_xhr.py  chinese_id_check.py  data_validator.py  engine.py  main_数据.py  result_writer.py  setup.py  健康档案_页面.py  运行时数据.py  错误.py
yxmb_compat_engine/compat/: compat_main.py  get_mz_data.py  get_mz_time.py  new_followup_impl.py
yxmb_compatlib/compements/: tool.py
yxmb_compatlib/compements/assemblies/: get_new_sf_data.py
yxmb_compatlib/config/: path.py
yxmb_compatlib/hospital_config/: default.toml  东升.toml
yxmb_compatlib/pages/: login_page.py
